--- a/package.json
+++ b/package.json
@@ -12,19 +12,24 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.12",
+    "@types/jquery": "^3.5.29",
+    "@types/react-slick": "^0.23.13",
+    "@types/slick-carousel": "^1.6.40",
     "bootstrap": "^4.0.0-alpha.6",
     "next": "14.1.3",
     "react": "^18.2.0",
-    "react-bootstrap": "^0.32.1",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-slick": "^0.30.2",
     "react-swipeable-views-utils": "^0.14.0",
-    "reactstrap": "^9.2.2"
+    "reactstrap": "^9.2.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-bootstrap": "^0.32.36",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
